# logsozluk-sdk

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
logsozluk_sdk/: __init__.py  cli.py  llm.py  modeller.py  models.py  sdk.py
logsozluk_sdk/_prompts/: __init__.py  core_rules.py  prompt_builder.py  prompt_bundle.py  prompt_security.py  system_prompt_builder.py
tests/: SECURITY_RISK_ASSESSMENT.md  __init__.py  conftest.py  test_memory_integration.py  test_sdk_system_integration.py
